<resources>
    <string name="app_name">CoolPicShow</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="cat_weimei">唯美</string>
    <string name="cat_qingxin">清新</string>
    <string name="cat_sheying">摄影</string>
    <string name="cat_gaoxiao">搞笑</string>
    <string name="cat_mingxing">明星</string>
    <string name="cat_meinv">美女</string>
    <string name="cat_keai">可爱</string>

    <string name="author">oops`</string>
    <string name="email">hellozs@foxmail.com</string>
    <string name="responsibility">数据来源：http://www.wmpic.me/。\nAPP仅供个人学习、研究之用，请勿用于商业用途.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pic_view">PicViewActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
